# tg-channel-intelli-dashboard

./: .env.example  .gitignore  README.md  README_APP_Description.md  README_OLD.md  docker-compose.yml  package.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e1a9783a0bb_posts_snapshots_analyses_.py  15766a843b39_audit_runs_scenario_alignment.py  257b8a875354_initial_channels.py  8d2f5c3f9b11_add_topic_search_to_channels.py  (+2 more)
backend/app/: __init__.py  datetime_compat.py  main.py
backend/app/ai/: __init__.py  (+1 more)
backend/docs/: AI_PIPELINE_ARCHITECTURE.md  CHANNEL_METRICS.md  PUBLISHING.md  QDRANT_SEMANTIC_LAYER.md  TELEGRAM_TELETHON.md
backend/scripts/: smoke_acceptance_audit.py  validate_queries_jsonl.py
backend/tests/: test_ai_pipeline_unit.py  test_api_telegram_status.py  test_api_v1_intelligence.py  test_catalog_search_fragments.py  test_channel_analysis_pdf.py  test_channel_metrics_compute.py  test_channel_report_metrics.py  test_channel_repository_upsert.py  test_channel_search_planner.py  test_context_builder_datetime_compat.py  test_discovery_new_only.py  test_media_payload.py  test_orchestration_coordinator.py  test_orchestration_job_http.py  test_publishing.py  test_queries_jsonl_contract.py  test_saved_catalog_page_limits.py  test_scenario3_summarize_batch.py  test_telethon_exceptions.py  test_telethon_media_bytes.py  test_telethon_rate_limit.py  test_telethon_session_source.py  test_telethon_user_session_service.py  test_vector_service_unit.py
(+162 files in other folders)
